@@ -338,7 +338,8 @@ public abstract class BspService<I extends WritableComparable,
           ", " + getTaskPartition() + " on " + serverPortList);
     }
     try {
-      this.zk = new ZooKeeperExt(serverPortList, sessionMsecTimeout, this);
+      this.zk = new ZooKeeperExt(
+          serverPortList, sessionMsecTimeout, this, context);
       connectedEvent.waitForever();
       this.fs = FileSystem.get(getConfiguration());
     } catch (IOException e) {
